--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-name: voltronic-mqtt
+name: voltronic-mqtt-custom
 services:
     python:
         device_cgroup_rules:
             - c 188:* rmw
         stdin_open: true
         tty: true
-        container_name: voltronic-mqtt
+        container_name: voltronic-mqtt-custom
 
 volumes:
   pgdata: {}
